# frames-api-grinatom-task

./: .env.dev  .env.prod  .gitignore  README.md  docker-compose.dev.yml  pyproject.toml
src/: constants.py  main.py  schemas.py  services.py
src/db/: database.py  models.py  services.py
