[tool.poetry]
name = "frames-api-grinatom-task"
version = "0.1.0"
description = ""
authors = ["Orkhan Kazymov <rayskarken@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.37"
psycopg2-binary = "^2.9.3"
alembic = "^1.8.0"
uvicorn = "^0.17.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
